--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="./Images/MAXCircle.png" alt="Foto de Maximilian">
+                <img src="./MAXCircle.png" alt="Foto de Maximilian">
             </td>
             <td>
                 <h1>Maximilian Haut Mayer</h1>
@@ -24,7 +24,7 @@
 
     <p>Eu sou um estudante de Programacao em Web Development, possuo conhecimento em  CSS, HTML e JavaScript. Recentemente desenvolvi um App de controle financeiro, onde o client pode fazer controle de suas financas e ter um melhor controle de seus gastos. Alem de ser estudante na area da programacao, tambem tenho formaçao juridica, e recentemente terminei minha pos-graduacao em Direito do Desporto na Universidade Catolica de Lisboa. Tambem, atuei como advogado durante dois anos, com atuacao na area fiscal, com focos em impostos como ICMS, PIS e COFINS.</p>
 
-    <p>Link to: Contact Information</p>
+   
     <hr>
 
     <h3>Educacao</h3>
