--- a/hobbies.html
+++ b/hobbies.html
@@ -9,10 +9,10 @@
 <body>
     <h3>Meus Hobbies</h3>
     <ol>
-        <li><a href="./gaming.jpg">Gaming</a></li>
-        <li><a href="./fishing.jpg">Pesca</a></li>
-        <li><a href="./pcTechs.jpg">PC tech</a></li>
-        <li><a href="./oldCars.jpg">Carros antigos</a></li>
+        <li><a href="/gaming.jpg">Gaming</a></li>
+        <li><a href="/fishing.jpg">Pesca</a></li>
+        <li><a href="/pcTechs.jpg">PC tech</a></li>
+        <li><a href="/oldCars.jpg">Carros antigos</a></li>
     </ol>
 </body>
 </html>
